add: regularization layers

--- a/train_notebook.ipynb
+++ b/train_notebook.ipynb
@@ -3,14 +3,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "least-distance",
+   "id": "dedicated-portuguese",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mon Feb 22 15:22:44 2021       \n",
+      "Tue Feb 23 23:11:29 2021       \n",
       "+-----------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 450.102.04   Driver Version: 450.102.04   CUDA Version: 11.0     |\n",
       "|-------------------------------+----------------------+----------------------+\n",
@@ -19,7 +19,7 @@
       "|                               |                      |               MIG M. |\n",
       "|===============================+======================+======================|\n",
       "|   0  GeForce GTX 1050    Off  | 00000000:01:00.0 Off |                  N/A |\n",
-      "| N/A   55C    P0    N/A /  N/A |   1029MiB /  4042MiB |      0%      Default |\n",
+      "| N/A   44C    P3    N/A /  N/A |    664MiB /  4042MiB |      0%      Default |\n",
       "|                               |                      |                  N/A |\n",
       "+-------------------------------+----------------------+----------------------+\n",
       "                                                                               \n",
@@ -28,12 +28,11 @@
       "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
       "|        ID   ID                                                   Usage      |\n",
       "|=============================================================================|\n",
-      "|    0   N/A  N/A      1278      G   /usr/lib/xorg/Xorg                 80MiB |\n",
-      "|    0   N/A  N/A      2030      G   /usr/lib/xorg/Xorg                245MiB |\n",
-      "|    0   N/A  N/A      2203      G   /usr/bin/gnome-shell              207MiB |\n",
-      "|    0   N/A  N/A      3534      G   ...AAAAAAAAA= --shared-files      249MiB |\n",
-      "|    0   N/A  N/A      8325      G   ...AAAAAAAAA= --shared-files       34MiB |\n",
-      "|    0   N/A  N/A     76458      G   ...AAAAAAAA== --shared-files      202MiB |\n",
+      "|    0   N/A  N/A      1330      G   /usr/lib/xorg/Xorg                 80MiB |\n",
+      "|    0   N/A  N/A      2073      G   /usr/lib/xorg/Xorg                164MiB |\n",
+      "|    0   N/A  N/A      2255      G   /usr/bin/gnome-shell              134MiB |\n",
+      "|    0   N/A  N/A      3897      G   ...AAAAAAAAA= --shared-files      180MiB |\n",
+      "|    0   N/A  N/A      6288      G   ...AAAAAAAA== --shared-files       95MiB |\n",
       "+-----------------------------------------------------------------------------+\n"
      ]
     }
@@ -45,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "finnish-jesus",
+   "id": "moved-quarterly",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "atlantic-technical",
+   "id": "chronic-luxembourg",
    "metadata": {},
    "outputs": [
     {
@@ -90,143 +89,179 @@
       "  'debug': False,\n",
       "  'gpus': '0',\n",
       "  'id': 'audio_effnet_b0',\n",
-      "  'loss': {'args': None, 'name': 'CrossEntropyLoss'},\n",
+      "  'loss': {'args': None, 'name': 'FocalLoss'},\n",
       "  'metric': [{'args': None, 'name': 'Accuracy'}],\n",
       "  'model': { 'args': { 'freeze_backbone': False,\n",
       "                       'from_pretrained': True,\n",
-      "                       'name': 'tf_efficientnet_b0_ns',\n",
+      "                       'name': 'tf_efficientnet_b3_ns',\n",
       "                       'num_classes': 3},\n",
       "             'name': 'BaseTimmModel'},\n",
       "  'optimizer': {'args': {'lr': 0.0001}, 'name': 'Adam'},\n",
       "  'pretrained': None,\n",
       "  'scheduler': { 'args': {'gamma': 0.2, 'last_epoch': -1, 'step_size': 3},\n",
       "                 'name': 'StepLR'},\n",
-      "  'trainer': {'log_step': 1, 'nepochs': 5, 'val_step': 1}}\n",
+      "  'trainer': {'log_step': 1, 'nepochs': 10, 'val_step': 1}}\n",
+      "Downloading: \"https://github.com/rwightman/pytorch-image-models/releases/download/v0.1-weights/tf_efficientnet_b3_ns-9d44bf68.pth\" to /home/kvu/.cache/torch/hub/checkpoints/tf_efficientnet_b3_ns-9d44bf68.pth\n",
       "\n",
       "Epoch   0\n",
       "-----------------------------------\n",
       "Training........\n",
-      "100%|█████████████████████████████████████████| 107/107 [02:45<00:00,  1.55s/it]\n",
+      "100%|█████████████████████████████████████████| 107/107 [03:20<00:00,  1.87s/it]\n",
       "+ Training result\n",
-      "Loss: 1.0845879767542688\n",
-      "Accuracy: 0.37704917788505554\n",
+      "Loss: 1.1440805436294772\n",
+      "Accuracy: 0.34660419821739197\n",
       "Evaluating........\n",
-      "100%|███████████████████████████████████████████| 48/48 [01:07<00:00,  1.41s/it]\n",
+      "100%|███████████████████████████████████████████| 48/48 [01:14<00:00,  1.55s/it]\n",
       "+ Evaluation result\n",
-      "Loss: 1.0609801126023135\n",
-      "Accuracy: 0.44736844301223755\n",
+      "Loss: 1.0966632738709448\n",
+      "Accuracy: 0.4105263352394104\n",
       "-----------------------------------\n",
-      "Loss is improved from  inf to  1.060980. Saving weights...\n",
-      "Accuracy is improved from  0.000000 to  0.447368. Saving weights...\n",
+      "Loss is improved from  inf to  1.096663. Saving weights...\n",
+      "Accuracy is improved from  0.000000 to  0.410526. Saving weights...\n",
       "\n",
       "Epoch   1\n",
       "-----------------------------------\n",
       "Training........\n",
-      "100%|█████████████████████████████████████████| 107/107 [02:53<00:00,  1.62s/it]\n",
+      "100%|█████████████████████████████████████████| 107/107 [02:49<00:00,  1.58s/it]\n",
       "+ Training result\n",
-      "Loss: 0.9761291658766917\n",
-      "Accuracy: 0.5597189664840698\n",
+      "Loss: 1.017336389728796\n",
+      "Accuracy: 0.5081967115402222\n",
       "Evaluating........\n",
-      "100%|███████████████████████████████████████████| 48/48 [01:13<00:00,  1.53s/it]\n",
+      "100%|███████████████████████████████████████████| 48/48 [01:09<00:00,  1.45s/it]\n",
       "+ Evaluation result\n",
-      "Loss: 1.0383809233705197\n",
-      "Accuracy: 0.4526315927505493\n",
+      "Loss: 1.1192571359376113\n",
+      "Accuracy: 0.40526318550109863\n",
       "-----------------------------------\n",
-      "Loss is improved from  1.060980 to  1.038381. Saving weights...\n",
-      "Accuracy is improved from  0.447368 to  0.452632. Saving weights...\n",
+      "Loss is not improved from 1.096663.\n",
+      "Accuracy is not improved from 0.410526.\n",
       "\n",
       "Epoch   2\n",
       "-----------------------------------\n",
       "Training........\n",
-      "100%|█████████████████████████████████████████| 107/107 [03:20<00:00,  1.87s/it]\n",
+      "100%|█████████████████████████████████████████| 107/107 [02:57<00:00,  1.66s/it]\n",
       "+ Training result\n",
-      "Loss: 0.8871536767371349\n",
-      "Accuracy: 0.6229507923126221\n",
+      "Loss: 0.9424702096208233\n",
+      "Accuracy: 0.5503512620925903\n",
       "Evaluating........\n",
-      "100%|███████████████████████████████████████████| 48/48 [01:11<00:00,  1.50s/it]\n",
+      "100%|███████████████████████████████████████████| 48/48 [01:06<00:00,  1.39s/it]\n",
       "+ Evaluation result\n",
-      "Loss: 0.9985883856813114\n",
-      "Accuracy: 0.5210526585578918\n",
+      "Loss: 1.049343309054772\n",
+      "Accuracy: 0.4578947424888611\n",
       "-----------------------------------\n",
-      "Loss is improved from  1.038381 to  0.998588. Saving weights...\n",
-      "Accuracy is improved from  0.452632 to  0.521053. Saving weights...\n",
+      "Loss is improved from  1.096663 to  1.049343. Saving weights...\n",
+      "Accuracy is improved from  0.410526 to  0.457895. Saving weights...\n",
       "\n",
       "Epoch   3\n",
       "-----------------------------------\n",
       "Training........\n",
-      "100%|█████████████████████████████████████████| 107/107 [03:05<00:00,  1.74s/it]\n",
+      "100%|█████████████████████████████████████████| 107/107 [02:56<00:00,  1.65s/it]\n",
       "+ Training result\n",
-      "Loss: 0.7233187358513055\n",
-      "Accuracy: 0.7283372282981873\n",
+      "Loss: 0.8297532763436576\n",
+      "Accuracy: 0.6323184967041016\n",
       "Evaluating........\n",
-      "100%|███████████████████████████████████████████| 48/48 [01:12<00:00,  1.50s/it]\n",
+      "100%|███████████████████████████████████████████| 48/48 [01:09<00:00,  1.44s/it]\n",
       "+ Evaluation result\n",
-      "Loss: 1.0957319748898346\n",
-      "Accuracy: 0.46315792202949524\n",
+      "Loss: 1.0798179085055988\n",
+      "Accuracy: 0.4421052932739258\n",
       "-----------------------------------\n",
-      "Loss is not improved from 0.998588.\n",
-      "Accuracy is not improved from 0.521053.\n",
+      "Loss is not improved from 1.049343.\n",
+      "Accuracy is not improved from 0.457895.\n",
       "\n",
       "Epoch   4\n",
       "-----------------------------------\n",
       "Training........\n",
-      "  4%|█▌                                         | 4/107 [00:08<03:18,  1.93s/it]^C\n",
-      "  4%|█▌                                         | 4/107 [00:08<03:40,  2.14s/it]\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/librosa/core/audio.py\", line 146, in load\n",
-      "    with sf.SoundFile(path) as sf_desc:\n",
-      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/soundfile.py\", line 629, in __init__\n",
-      "    self._file = self._open(file, mode_int, closefd)\n",
-      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/soundfile.py\", line 1184, in _open\n",
-      "    \"Error opening {0!r}: \".format(self.name))\n",
-      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/soundfile.py\", line 1357, in _error_check\n",
-      "    raise RuntimeError(prefix + _ffi.string(err_str).decode('utf-8', 'replace'))\n",
-      "RuntimeError: Error opening 'data/AFEW/raw-audios/train/001414094.mp3': File contains data in an unknown format.\n",
+      "100%|█████████████████████████████████████████| 107/107 [03:03<00:00,  1.71s/it]\n",
+      "+ Training result\n",
+      "Loss: 0.7857698231378448\n",
+      "Accuracy: 0.6627634167671204\n",
+      "Evaluating........\n",
+      "100%|███████████████████████████████████████████| 48/48 [01:18<00:00,  1.63s/it]\n",
+      "+ Evaluation result\n",
+      "Loss: 1.0580110580970838\n",
+      "Accuracy: 0.5052632093429565\n",
+      "-----------------------------------\n",
+      "Loss is not improved from 1.049343.\n",
+      "Accuracy is improved from  0.457895 to  0.505263. Saving weights...\n",
       "\n",
-      "During handling of the above exception, another exception occurred:\n",
+      "Epoch   5\n",
+      "-----------------------------------\n",
+      "Training........\n",
+      "100%|█████████████████████████████████████████| 107/107 [03:18<00:00,  1.86s/it]\n",
+      "+ Training result\n",
+      "Loss: 0.5911170678021753\n",
+      "Accuracy: 0.7704917788505554\n",
+      "Evaluating........\n",
+      "100%|███████████████████████████████████████████| 48/48 [01:16<00:00,  1.59s/it]\n",
+      "+ Evaluation result\n",
+      "Loss: 1.1397163247068722\n",
+      "Accuracy: 0.47894740104675293\n",
+      "-----------------------------------\n",
+      "Loss is not improved from 1.049343.\n",
+      "Accuracy is not improved from 0.505263.\n",
       "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"train.py\", line 120, in <module>\n",
-      "    train(config)\n",
-      "  File \"train.py\", line 93, in train\n",
-      "    val_dataloader=val_dataloader)\n",
-      "  File \"./libs/workers/trainer.py\", line 178, in train\n",
-      "    self.train_epoch(epoch=epoch, dataloader=train_dataloader)\n",
-      "  File \"./libs/workers/trainer.py\", line 87, in train_epoch\n",
-      "    for i, (inp, lbl) in enumerate(progress_bar):\n",
-      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/tqdm/std.py\", line 1170, in __iter__\n",
-      "    for obj in iterable:\n",
-      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/torch/utils/data/dataloader.py\", line 435, in __next__\n",
-      "    data = self._next_data()\n",
-      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/torch/utils/data/dataloader.py\", line 475, in _next_data\n",
-      "    data = self._dataset_fetcher.fetch(index)  # may raise StopIteration\n",
-      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/torch/utils/data/_utils/fetch.py\", line 44, in fetch\n",
-      "    data = [self.dataset[idx] for idx in possibly_batched_index]\n",
-      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/torch/utils/data/_utils/fetch.py\", line 44, in <listcomp>\n",
-      "    data = [self.dataset[idx] for idx in possibly_batched_index]\n",
-      "  File \"./libs/datasets/audio.py\", line 66, in __getitem__\n",
-      "    y = self.get_audio(audio_path_w_format)\n",
-      "  File \"./libs/datasets/audio.py\", line 25, in get_audio\n",
-      "    y, _ = lb.load(audio_path, sr=self.sr, duration=self.duration, offset=offset)\n",
-      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/librosa/core/audio.py\", line 163, in load\n",
-      "    y, sr_native = __audioread_load(path, offset, duration, dtype)\n",
-      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/librosa/core/audio.py\", line 187, in __audioread_load\n",
-      "    with audioread.audio_open(path) as input_file:\n",
-      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/audioread/__init__.py\", line 107, in audio_open\n",
-      "    backends = available_backends()\n",
-      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/audioread/__init__.py\", line 71, in available_backends\n",
-      "    if _ca_available():\n",
-      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/audioread/__init__.py\", line 49, in _ca_available\n",
-      "    lib = ctypes.util.find_library('AudioToolbox')\n",
-      "  File \"/usr/lib/python3.6/ctypes/util.py\", line 314, in find_library\n",
-      "    _get_soname(_findLib_gcc(name) or _findLib_ld(name))\n",
-      "  File \"/usr/lib/python3.6/ctypes/util.py\", line 302, in _findLib_ld\n",
-      "    universal_newlines=True)\n",
-      "  File \"/usr/lib/python3.6/subprocess.py\", line 729, in __init__\n",
-      "    restore_signals, start_new_session)\n",
-      "  File \"/usr/lib/python3.6/subprocess.py\", line 1295, in _execute_child\n",
-      "    restore_signals, start_new_session, preexec_fn)\n",
-      "KeyboardInterrupt\n"
+      "Epoch   6\n",
+      "-----------------------------------\n",
+      "Training........\n",
+      "100%|█████████████████████████████████████████| 107/107 [02:47<00:00,  1.57s/it]\n",
+      "+ Training result\n",
+      "Loss: 0.5274798095783341\n",
+      "Accuracy: 0.7915690541267395\n",
+      "Evaluating........\n",
+      "100%|███████████████████████████████████████████| 48/48 [01:04<00:00,  1.34s/it]\n",
+      "+ Evaluation result\n",
+      "Loss: 1.1209784767900903\n",
+      "Accuracy: 0.5105263590812683\n",
+      "-----------------------------------\n",
+      "Loss is not improved from 1.049343.\n",
+      "Accuracy is improved from  0.505263 to  0.510526. Saving weights...\n",
+      "\n",
+      "Epoch   7\n",
+      "-----------------------------------\n",
+      "Training........\n",
+      "100%|█████████████████████████████████████████| 107/107 [02:39<00:00,  1.49s/it]\n",
+      "+ Training result\n",
+      "Loss: 0.4518737127987024\n",
+      "Accuracy: 0.8313816785812378\n",
+      "Evaluating........\n",
+      "100%|███████████████████████████████████████████| 48/48 [01:03<00:00,  1.33s/it]\n",
+      "+ Evaluation result\n",
+      "Loss: 1.2108653330554564\n",
+      "Accuracy: 0.48947370052337646\n",
+      "-----------------------------------\n",
+      "Loss is not improved from 1.049343.\n",
+      "Accuracy is not improved from 0.510526.\n",
+      "\n",
+      "Epoch   8\n",
+      "-----------------------------------\n",
+      "Training........\n",
+      "100%|█████████████████████████████████████████| 107/107 [02:39<00:00,  1.49s/it]\n",
+      "+ Training result\n",
+      "Loss: 0.41983339103443607\n",
+      "Accuracy: 0.845433235168457\n",
+      "Evaluating........\n",
+      "100%|███████████████████████████████████████████| 48/48 [01:04<00:00,  1.35s/it]\n",
+      "+ Evaluation result\n",
+      "Loss: 1.3149526494865622\n",
+      "Accuracy: 0.4736842215061188\n",
+      "-----------------------------------\n",
+      "Loss is not improved from 1.049343.\n",
+      "Accuracy is not improved from 0.510526.\n",
+      "\n",
+      "Epoch   9\n",
+      "-----------------------------------\n",
+      "Training........\n",
+      "100%|█████████████████████████████████████████| 107/107 [02:38<00:00,  1.48s/it]\n",
+      "+ Training result\n",
+      "Loss: 0.41414868716742387\n",
+      "Accuracy: 0.8384074568748474\n",
+      "Evaluating........\n",
+      "100%|███████████████████████████████████████████| 48/48 [01:04<00:00,  1.35s/it]\n",
+      "+ Evaluation result\n",
+      "Loss: 1.4603713427980745\n",
+      "Accuracy: 0.42105263471603394\n",
+      "-----------------------------------\n",
+      "Loss is not improved from 1.049343.\n",
+      "Accuracy is not improved from 0.510526.\n"
      ]
     }
    ],
@@ -237,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "developed-fairy",
+   "id": "freelance-doctor",
    "metadata": {},
    "outputs": [],
    "source": []
