--- a/train_notebook.ipynb
+++ b/train_notebook.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dedicated-portuguese",
+   "id": "northern-arnold",
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "moved-quarterly",
+   "id": "cellular-jacket",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "chronic-luxembourg",
+   "id": "devoted-simulation",
    "metadata": {},
    "outputs": [
     {
@@ -270,9 +270,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "stuck-bolivia",
+   "metadata": {},
+   "source": [
+    "## Tensorboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "grand-advisory",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext tensorboard\n",
+    "%reload_ext tensorboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "sudden-addiction",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "      <iframe id=\"tensorboard-frame-dcc4344ce5365734\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      </iframe>\n",
+       "      <script>\n",
+       "        (function() {\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-dcc4344ce5365734\");\n",
+       "          const url = new URL(\"/\", window.location);\n",
+       "          const port = 6006;\n",
+       "          if (port) {\n",
+       "            url.port = port;\n",
+       "          }\n",
+       "          frame.src = url;\n",
+       "        })();\n",
+       "      </script>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%tensorboard --logdir=runs/"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "freelance-doctor",
+   "id": "brazilian-brighton",
    "metadata": {},
    "outputs": [],
    "source": []
