add: small changes

--- a/infer_notebook.ipynb
+++ b/infer_notebook.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "least-summit",
+   "id": "southern-forward",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "handy-navigation",
+   "id": "preceding-taxation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "natural-portland",
+   "id": "practical-posting",
    "metadata": {},
    "source": [
     "## Load weight"
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "chinese-origin",
+   "id": "secret-processor",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "important-narrative",
+   "id": "entitled-authentication",
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "meaningful-stanford",
+   "id": "smart-ethics",
    "metadata": {},
    "source": [
     "## Dataset"
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "certified-crazy",
+   "id": "optional-visiting",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "affecting-commander",
+   "id": "supported-division",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "extreme-macro",
+   "id": "complex-language",
    "metadata": {},
    "source": [
     "## Inference"
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "certified-driving",
+   "id": "greatest-scheduling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "british-maple",
+   "id": "metric-springer",
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "complicated-evolution",
+   "id": "affecting-festival",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,8 +240,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "sufficient-truth",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-36-edf65a8929bf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mdel\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconfig\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "del model, config"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "minus-brass",
+   "id": "parallel-wellington",
    "metadata": {},
    "source": [
     "## Confusion matrix"
@@ -250,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "paperback-major",
+   "id": "bronze-funds",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "electrical-carolina",
+   "id": "nutritional-bacteria",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "alert-hybrid",
+   "id": "italic-elevation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "recovered-pearl",
+   "id": "illegal-trunk",
    "metadata": {},
    "outputs": [
     {
@@ -309,8 +331,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "id": "corrected-sentence",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "abroad-mercy",
+   "id": "stopped-desert",
    "metadata": {},
    "outputs": [],
    "source": []
