--- a/train_notebook.ipynb
+++ b/train_notebook.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "northern-arnold",
+   "execution_count": 4,
+   "id": "controlling-partner",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tue Feb 23 23:11:29 2021       \n",
+      "Wed Feb 24 01:12:05 2021       \n",
       "+-----------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 450.102.04   Driver Version: 450.102.04   CUDA Version: 11.0     |\n",
       "|-------------------------------+----------------------+----------------------+\n",
@@ -19,7 +19,7 @@
       "|                               |                      |               MIG M. |\n",
       "|===============================+======================+======================|\n",
       "|   0  GeForce GTX 1050    Off  | 00000000:01:00.0 Off |                  N/A |\n",
-      "| N/A   44C    P3    N/A /  N/A |    664MiB /  4042MiB |      0%      Default |\n",
+      "| N/A   48C    P3    N/A /  N/A |   2148MiB /  4042MiB |      2%      Default |\n",
       "|                               |                      |                  N/A |\n",
       "+-------------------------------+----------------------+----------------------+\n",
       "                                                                               \n",
@@ -29,10 +29,11 @@
       "|        ID   ID                                                   Usage      |\n",
       "|=============================================================================|\n",
       "|    0   N/A  N/A      1330      G   /usr/lib/xorg/Xorg                 80MiB |\n",
-      "|    0   N/A  N/A      2073      G   /usr/lib/xorg/Xorg                164MiB |\n",
-      "|    0   N/A  N/A      2255      G   /usr/bin/gnome-shell              134MiB |\n",
-      "|    0   N/A  N/A      3897      G   ...AAAAAAAAA= --shared-files      180MiB |\n",
-      "|    0   N/A  N/A      6288      G   ...AAAAAAAA== --shared-files       95MiB |\n",
+      "|    0   N/A  N/A      2073      G   /usr/lib/xorg/Xorg                195MiB |\n",
+      "|    0   N/A  N/A      2255      G   /usr/bin/gnome-shell              158MiB |\n",
+      "|    0   N/A  N/A      3897      G   ...AAAAAAAAA= --shared-files      275MiB |\n",
+      "|    0   N/A  N/A      6288      G   ...AAAAAAAA== --shared-files      142MiB |\n",
+      "|    0   N/A  N/A    226236      C   ...e/kvu/erc/venv/bin/python     1285MiB |\n",
       "+-----------------------------------------------------------------------------+\n"
      ]
     }
@@ -43,8 +44,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "cellular-jacket",
+   "execution_count": 5,
+   "id": "quick-worcester",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,8 +57,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "devoted-simulation",
+   "execution_count": null,
+   "id": "valued-midnight",
    "metadata": {},
    "outputs": [
     {
@@ -93,175 +94,19 @@
       "  'metric': [{'args': None, 'name': 'Accuracy'}],\n",
       "  'model': { 'args': { 'freeze_backbone': False,\n",
       "                       'from_pretrained': True,\n",
-      "                       'name': 'tf_efficientnet_b3_ns',\n",
-      "                       'num_classes': 3},\n",
+      "                       'name': 'tf_efficientnet_b0_ns',\n",
+      "                       'num_classes': 7},\n",
       "             'name': 'BaseTimmModel'},\n",
       "  'optimizer': {'args': {'lr': 0.0001}, 'name': 'Adam'},\n",
       "  'pretrained': None,\n",
       "  'scheduler': { 'args': {'gamma': 0.2, 'last_epoch': -1, 'step_size': 3},\n",
       "                 'name': 'StepLR'},\n",
       "  'trainer': {'log_step': 1, 'nepochs': 10, 'val_step': 1}}\n",
-      "Downloading: \"https://github.com/rwightman/pytorch-image-models/releases/download/v0.1-weights/tf_efficientnet_b3_ns-9d44bf68.pth\" to /home/kvu/.cache/torch/hub/checkpoints/tf_efficientnet_b3_ns-9d44bf68.pth\n",
       "\n",
       "Epoch   0\n",
       "-----------------------------------\n",
       "Training........\n",
-      "100%|█████████████████████████████████████████| 107/107 [03:20<00:00,  1.87s/it]\n",
-      "+ Training result\n",
-      "Loss: 1.1440805436294772\n",
-      "Accuracy: 0.34660419821739197\n",
-      "Evaluating........\n",
-      "100%|███████████████████████████████████████████| 48/48 [01:14<00:00,  1.55s/it]\n",
-      "+ Evaluation result\n",
-      "Loss: 1.0966632738709448\n",
-      "Accuracy: 0.4105263352394104\n",
-      "-----------------------------------\n",
-      "Loss is improved from  inf to  1.096663. Saving weights...\n",
-      "Accuracy is improved from  0.000000 to  0.410526. Saving weights...\n",
-      "\n",
-      "Epoch   1\n",
-      "-----------------------------------\n",
-      "Training........\n",
-      "100%|█████████████████████████████████████████| 107/107 [02:49<00:00,  1.58s/it]\n",
-      "+ Training result\n",
-      "Loss: 1.017336389728796\n",
-      "Accuracy: 0.5081967115402222\n",
-      "Evaluating........\n",
-      "100%|███████████████████████████████████████████| 48/48 [01:09<00:00,  1.45s/it]\n",
-      "+ Evaluation result\n",
-      "Loss: 1.1192571359376113\n",
-      "Accuracy: 0.40526318550109863\n",
-      "-----------------------------------\n",
-      "Loss is not improved from 1.096663.\n",
-      "Accuracy is not improved from 0.410526.\n",
-      "\n",
-      "Epoch   2\n",
-      "-----------------------------------\n",
-      "Training........\n",
-      "100%|█████████████████████████████████████████| 107/107 [02:57<00:00,  1.66s/it]\n",
-      "+ Training result\n",
-      "Loss: 0.9424702096208233\n",
-      "Accuracy: 0.5503512620925903\n",
-      "Evaluating........\n",
-      "100%|███████████████████████████████████████████| 48/48 [01:06<00:00,  1.39s/it]\n",
-      "+ Evaluation result\n",
-      "Loss: 1.049343309054772\n",
-      "Accuracy: 0.4578947424888611\n",
-      "-----------------------------------\n",
-      "Loss is improved from  1.096663 to  1.049343. Saving weights...\n",
-      "Accuracy is improved from  0.410526 to  0.457895. Saving weights...\n",
-      "\n",
-      "Epoch   3\n",
-      "-----------------------------------\n",
-      "Training........\n",
-      "100%|█████████████████████████████████████████| 107/107 [02:56<00:00,  1.65s/it]\n",
-      "+ Training result\n",
-      "Loss: 0.8297532763436576\n",
-      "Accuracy: 0.6323184967041016\n",
-      "Evaluating........\n",
-      "100%|███████████████████████████████████████████| 48/48 [01:09<00:00,  1.44s/it]\n",
-      "+ Evaluation result\n",
-      "Loss: 1.0798179085055988\n",
-      "Accuracy: 0.4421052932739258\n",
-      "-----------------------------------\n",
-      "Loss is not improved from 1.049343.\n",
-      "Accuracy is not improved from 0.457895.\n",
-      "\n",
-      "Epoch   4\n",
-      "-----------------------------------\n",
-      "Training........\n",
-      "100%|█████████████████████████████████████████| 107/107 [03:03<00:00,  1.71s/it]\n",
-      "+ Training result\n",
-      "Loss: 0.7857698231378448\n",
-      "Accuracy: 0.6627634167671204\n",
-      "Evaluating........\n",
-      "100%|███████████████████████████████████████████| 48/48 [01:18<00:00,  1.63s/it]\n",
-      "+ Evaluation result\n",
-      "Loss: 1.0580110580970838\n",
-      "Accuracy: 0.5052632093429565\n",
-      "-----------------------------------\n",
-      "Loss is not improved from 1.049343.\n",
-      "Accuracy is improved from  0.457895 to  0.505263. Saving weights...\n",
-      "\n",
-      "Epoch   5\n",
-      "-----------------------------------\n",
-      "Training........\n",
-      "100%|█████████████████████████████████████████| 107/107 [03:18<00:00,  1.86s/it]\n",
-      "+ Training result\n",
-      "Loss: 0.5911170678021753\n",
-      "Accuracy: 0.7704917788505554\n",
-      "Evaluating........\n",
-      "100%|███████████████████████████████████████████| 48/48 [01:16<00:00,  1.59s/it]\n",
-      "+ Evaluation result\n",
-      "Loss: 1.1397163247068722\n",
-      "Accuracy: 0.47894740104675293\n",
-      "-----------------------------------\n",
-      "Loss is not improved from 1.049343.\n",
-      "Accuracy is not improved from 0.505263.\n",
-      "\n",
-      "Epoch   6\n",
-      "-----------------------------------\n",
-      "Training........\n",
-      "100%|█████████████████████████████████████████| 107/107 [02:47<00:00,  1.57s/it]\n",
-      "+ Training result\n",
-      "Loss: 0.5274798095783341\n",
-      "Accuracy: 0.7915690541267395\n",
-      "Evaluating........\n",
-      "100%|███████████████████████████████████████████| 48/48 [01:04<00:00,  1.34s/it]\n",
-      "+ Evaluation result\n",
-      "Loss: 1.1209784767900903\n",
-      "Accuracy: 0.5105263590812683\n",
-      "-----------------------------------\n",
-      "Loss is not improved from 1.049343.\n",
-      "Accuracy is improved from  0.505263 to  0.510526. Saving weights...\n",
-      "\n",
-      "Epoch   7\n",
-      "-----------------------------------\n",
-      "Training........\n",
-      "100%|█████████████████████████████████████████| 107/107 [02:39<00:00,  1.49s/it]\n",
-      "+ Training result\n",
-      "Loss: 0.4518737127987024\n",
-      "Accuracy: 0.8313816785812378\n",
-      "Evaluating........\n",
-      "100%|███████████████████████████████████████████| 48/48 [01:03<00:00,  1.33s/it]\n",
-      "+ Evaluation result\n",
-      "Loss: 1.2108653330554564\n",
-      "Accuracy: 0.48947370052337646\n",
-      "-----------------------------------\n",
-      "Loss is not improved from 1.049343.\n",
-      "Accuracy is not improved from 0.510526.\n",
-      "\n",
-      "Epoch   8\n",
-      "-----------------------------------\n",
-      "Training........\n",
-      "100%|█████████████████████████████████████████| 107/107 [02:39<00:00,  1.49s/it]\n",
-      "+ Training result\n",
-      "Loss: 0.41983339103443607\n",
-      "Accuracy: 0.845433235168457\n",
-      "Evaluating........\n",
-      "100%|███████████████████████████████████████████| 48/48 [01:04<00:00,  1.35s/it]\n",
-      "+ Evaluation result\n",
-      "Loss: 1.3149526494865622\n",
-      "Accuracy: 0.4736842215061188\n",
-      "-----------------------------------\n",
-      "Loss is not improved from 1.049343.\n",
-      "Accuracy is not improved from 0.510526.\n",
-      "\n",
-      "Epoch   9\n",
-      "-----------------------------------\n",
-      "Training........\n",
-      "100%|█████████████████████████████████████████| 107/107 [02:38<00:00,  1.48s/it]\n",
-      "+ Training result\n",
-      "Loss: 0.41414868716742387\n",
-      "Accuracy: 0.8384074568748474\n",
-      "Evaluating........\n",
-      "100%|███████████████████████████████████████████| 48/48 [01:04<00:00,  1.35s/it]\n",
-      "+ Evaluation result\n",
-      "Loss: 1.4603713427980745\n",
-      "Accuracy: 0.42105263471603394\n",
-      "-----------------------------------\n",
-      "Loss is not improved from 1.049343.\n",
-      "Accuracy is not improved from 0.510526.\n"
+      " 19%|████████                                  | 37/194 [00:56<03:45,  1.44s/it]"
      ]
     }
    ],
@@ -271,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stuck-bolivia",
+   "id": "social-standard",
    "metadata": {},
    "source": [
     "## Tensorboard"
@@ -279,8 +124,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "grand-advisory",
+   "execution_count": null,
+   "id": "nervous-cable",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,37 +135,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "sudden-addiction",
+   "execution_count": null,
+   "id": "moral-bubble",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "      <iframe id=\"tensorboard-frame-dcc4344ce5365734\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
-       "      </iframe>\n",
-       "      <script>\n",
-       "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-dcc4344ce5365734\");\n",
-       "          const url = new URL(\"/\", window.location);\n",
-       "          const port = 6006;\n",
-       "          if (port) {\n",
-       "            url.port = port;\n",
-       "          }\n",
-       "          frame.src = url;\n",
-       "        })();\n",
-       "      </script>\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%tensorboard --logdir=runs/"
    ]
@@ -328,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "brazilian-brighton",
+   "id": "configured-compound",
    "metadata": {},
    "outputs": [],
    "source": []
