--- a/train_notebook.ipynb
+++ b/train_notebook.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "intermediate-tuning",
+   "execution_count": 1,
+   "id": "interior-pierre",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wed Feb 24 01:12:05 2021       \n",
+      "Wed Feb 24 01:23:21 2021       \n",
       "+-----------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 450.102.04   Driver Version: 450.102.04   CUDA Version: 11.0     |\n",
       "|-------------------------------+----------------------+----------------------+\n",
@@ -19,7 +19,7 @@
       "|                               |                      |               MIG M. |\n",
       "|===============================+======================+======================|\n",
       "|   0  GeForce GTX 1050    Off  | 00000000:01:00.0 Off |                  N/A |\n",
-      "| N/A   48C    P3    N/A /  N/A |   2148MiB /  4042MiB |      2%      Default |\n",
+      "| N/A   53C    P0    N/A /  N/A |   2068MiB /  4042MiB |     11%      Default |\n",
       "|                               |                      |                  N/A |\n",
       "+-------------------------------+----------------------+----------------------+\n",
       "                                                                               \n",
@@ -29,10 +29,10 @@
       "|        ID   ID                                                   Usage      |\n",
       "|=============================================================================|\n",
       "|    0   N/A  N/A      1330      G   /usr/lib/xorg/Xorg                 80MiB |\n",
-      "|    0   N/A  N/A      2073      G   /usr/lib/xorg/Xorg                195MiB |\n",
+      "|    0   N/A  N/A      2073      G   /usr/lib/xorg/Xorg                205MiB |\n",
       "|    0   N/A  N/A      2255      G   /usr/bin/gnome-shell              158MiB |\n",
-      "|    0   N/A  N/A      3897      G   ...AAAAAAAAA= --shared-files      275MiB |\n",
-      "|    0   N/A  N/A      6288      G   ...AAAAAAAA== --shared-files      142MiB |\n",
+      "|    0   N/A  N/A      3897      G   ...AAAAAAAAA= --shared-files      198MiB |\n",
+      "|    0   N/A  N/A      6288      G   ...AAAAAAAA== --shared-files      129MiB |\n",
       "|    0   N/A  N/A    226236      C   ...e/kvu/erc/venv/bin/python     1285MiB |\n",
       "+-----------------------------------------------------------------------------+\n"
      ]
@@ -44,8 +44,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "alpha-tract",
+   "execution_count": 2,
+   "id": "buried-reset",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "patent-denmark",
+   "id": "confused-breath",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!rm -rf runs/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "respiratory-commodity",
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +116,23 @@
       "Epoch   0\n",
       "-----------------------------------\n",
       "Training........\n",
-      " 58%|███████████████████████▋                 | 112/194 [02:55<02:00,  1.47s/it]"
+      "100%|█████████████████████████████████████████| 194/194 [05:27<00:00,  1.69s/it]\n",
+      "+ Training result\n",
+      "Loss: 1.9069749000146208\n",
+      "Accuracy: 0.2121604084968567\n",
+      "Evaluating........\n",
+      "100%|███████████████████████████████████████████| 96/96 [02:20<00:00,  1.46s/it]\n",
+      "+ Evaluation result\n",
+      "Loss: 1.8811281844973562\n",
+      "Accuracy: 0.24281984567642212\n",
+      "-----------------------------------\n",
+      "Loss is improved from  inf to  1.881128. Saving weights...\n",
+      "Accuracy is improved from  0.000000 to  0.242820. Saving weights...\n",
+      "\n",
+      "Epoch   1\n",
+      "-----------------------------------\n",
+      "Training........\n",
+      " 36%|██████████████▉                           | 69/194 [01:59<03:18,  1.59s/it]"
      ]
     }
    ],
@@ -116,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "active-underwear",
+   "id": "pleased-teaching",
    "metadata": {},
    "source": [
     "## Tensorboard"
@@ -125,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hourly-perception",
+   "id": "partial-reset",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "answering-visitor",
+   "id": "norman-catalog",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "according-thomas",
+   "id": "dried-basin",
    "metadata": {},
    "outputs": [],
    "source": []
